# python_training_lbc

./: pyproject.toml  test1.ipynb
