[project]
name = "python-training-lbc"
version = "0.1.0"
description = ""
authors = [
    {name = "slebail",email = "panterose@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "jupyter-contrib-nbextensions (>=0.7.0,<0.8.0)",
    "jupyter-nbextensions-configurator (>=0.6.4,<0.7.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "nbgrader (>=0.9.5,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
